--- a/vanilla-ts/style.css
+++ b/vanilla-ts/style.css
@@ -828,3 +828,16 @@ body {
     background-color: #155d35;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.15);
 }
+#loader {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    background: rgba(255, 255, 255, 0.9);
+    padding: 1em 2em;
+    transform: translate(-50%, -50%);
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    z-index: 9999;
+    font-weight: bold;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
