--- a/vanilla-ts/style.css
+++ b/vanilla-ts/style.css
@@ -829,7 +829,7 @@ body {
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.15);
 }
 #loader {
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     background: rgba(255, 255, 255, 0.9);
@@ -837,7 +837,7 @@ body {
     transform: translate(-50%, -50%);
     border: 1px solid #ccc;
     border-radius: 8px;
-    z-index: 9999;
+    z-index: -1;
     font-weight: bold;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
